<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompraReembolsoFragment">

    <Button
        android:id="@+id/btasesoria"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:text="@string/asesoria"
        app:layout_constraintBaseline_toBaselineOf="@+id/btactivos"
        app:layout_constraintEnd_toEndOf="@+id/btcapacitacion"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/opcion_compra_reembolso"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btactivos"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="28dp"
        android:text="@string/activos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btcapacitacion"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="59dp"
        android:text="@string/capacitacion"
        app:layout_constraintBaseline_toBaselineOf="@+id/btinfraestructura"
        app:layout_constraintEnd_toStartOf="@+id/btinfraestructura"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btinfraestructura"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:text="@string/infraestructura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btactivos" />

    <Button
        android:id="@+id/btpublicidad"
        android:layout_width="159dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="220dp"
        android:text="@string/publicidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btcaptrabajo"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/capital_trabajo"
        app:layout_constraintBottom_toBottomOf="@+id/btpublicidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btinfraestructura"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>